[gd_scene load_steps=2 format=3 uid="uid://cbxj7rn12i6uf"]

[ext_resource type="Script" path="res://components/componentScripts/town_segment.gd" id="1_i31rt"]

[node name="TownSegment" type="ProgressBar"]
custom_minimum_size = Vector2(0, 12)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1916.0
offset_bottom = -1068.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
rounded = true
show_percentage = false
script = ExtResource("1_i31rt")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
